@@ -1,8 +1,10 @@
 --- Release 2.1.1 ----
 
+2010-03-04 Guido Scholz <guido.scholz@bayernline.de>
+	* srcp-fb.*, srcp-info.c, srcp-command.c: Fixed undelivered
+        INFO messages caused by sizeof(msg).
+
 2010-03-03 Guido Scholz <guido.scholz@bayernline.de>
-	* srcp-fb.c: Fixed undelivered INFO messages caused by
-	sizeof(msg).
 	* i2c-dev.*: Fixed opensuse compile error, unused function
 	parameters removed
 
